# scientific_programming_project

./: .gitignore  Dockerfile  HTTP-Request-Handeling.ipynb  README.md  hypercorn-config.toml  pyproject.toml  setup.cfg  sp_project.ipynb
.github/workflows/: EntsoeActions  docker.yml  entsoe.yml  openweather.yml  weather.yml  webapp.yml  wetter2.yml
data/: prediction.py
frontend/: index.html
notebooks/: DB-Abfrage.ipynb  Experiment with parsing wetter2.ipynb  Feature_Preparation.ipynb  Graphical Visualisation.ipynb  HTTP-Request-Handeling.ipynb  Index-Settings.ipynb  Modelling.ipynb  entsoE.ipynb  openWeather.ipynb  sp_project.ipynb
notebooks/DB_Access/: db_access_energy.ipynb  db_access_entsoe.ipynb  db_access_openweather.ipynb  db_access_wetter2.ipynb  db_wetter2.ipynb
notebooks/Data_Scraping/: Index-Settings.ipynb  entsoE_handler.ipynb  openWeather_handler.ipynb  openWeather_historic_handler.ipynb  openweather_prediction_handler.ipynb  wetter2_handler.ipynb
notebooks/Other_Code/: Coordinates in Switzerland.ipynb  Create Model.ipynb  Delete Data from DB.ipynb  Index-Settings.ipynb  Solar_Power.ipynb  delete_data.ipynb
notebooks/data_preparation/: db_entsoe.ipynb  db_openweather.ipynb  db_openweather_historic.ipynb  db_openweather_prediction.ipynb  db_wetter2.ipynb  modelling.ipynb  prediction.ipynb
notebooks/data_scraping/: entsoE_scraper.ipynb  openWeather_historic_scraper.ipynb  openweather_prediction_scraper.ipynb  wetter2_scraper.ipynb
notebooks/data_visualisation/: Create Model.ipynb  Graphical Visualisation.ipynb  Modelling.ipynb  energy_prediction.ipynb  energy_visualisation.ipynb  energy_visuals.ipynb  model_visuals.ipynb  prediction.ipynb  weather_prediction_visualisation.ipynb  weather_visualisation.ipynb  weather_visuals.ipynb
src/sp_project/: app_state.py  db_client.py  notebook_tools.py  version.py
src/sp_project/backend_server/: main.py
src/sp_project/data_collection/: entsoe_scraper.py  openweather_api_client.py  openweather_historic.py  openweather_historic_scraper.py  openweather_prediction.py  wetter2_scraper.py
src/sp_project/data_modelling/: create_model.py  model_visuals.py  prediction_preparation.py
src/sp_project/data_preparation/: db_client.py  db_entsoe.py  db_openweather.py  db_openweather_historic.py  db_openweather_prediction.py  db_wetter2.py  model.py  model_preparation.py  prediction.py  prediction_preparation.py  solar_power.py
src/sp_project/data_scraping/: entsoe_scraper.py  openweather_api_client.py  openweather_prediction_scraper.py  openweather_scraper.py  wetter2_scraper.py
src/sp_project/data_visualisation/: model_visuals.py
src/sp_project/data_visuals/: energy_historic_plots.py  energy_prediction_plots.py  weather_historic_plots.py  weather_prediction_plots.py
src/sp_project/db_access/: db_access_energy.py  db_access_entsoe.py  db_access_openweather.py  db_access_wetter2.py
src/sp_project/energy/: db_energy_access.py  entsoe.eu_scraper.py  (+1 more)
(+34 files in other folders)
