[metadata]
name = sp-project
version = 0.1.0
author = Daniela Komenda
author_email = d.komenda@hotmail.com
description = Scientific Programming Project
long_description = Scraping and modelling of Weather- and Energy-Data to make a prediction about future Energy-Generation
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.9
install_requires =
    httpx
    anyio
    motor
    pandas
    tqdm
    pymongo
    bs4

web-server=
    quart
    
scraper=
    



[options.packages.find]
where=src
