[metadata]
name = sp-project
version = 0.1.0
author = Daniela Komenda
author_email = d.komenda@hotmail.com
description = Scientific Programming Project
long_description = Scraping and modelling of Weather- and Energy-Data to predict future Energy-Production
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    httpx
    anyio
    motor
    pandas
    tqdm
    pymongo
    bs4

[options.extras_require]
web-server =
    quart
    bokeh
    Flask-Caching
    scikit-learn
    matplotlib

notebooks =
    pyyaml

[options.packages.find]
where=src
